# commentor-backend

./: .dockerigonore  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  index.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/hooks/: pre-commit
doc/: endpoints.md
src/: app.py  gchat_notificator.py
src/controllers/: api.py
src/models/: Array.py  Comment.py  Comments.py  Map.py
src/repositories/: comments_repository.py
src/services/: CommentsService.py  comments_service.py
src/stores/: Store.py  file_store.py  memory_store.py  mongodb_store.py  store.py
src/util/: id_generator.py
test/: test_add.py
test/controllers/: test_api.py
test/models/: test_comments.py
test/repositories/: test_comments_repository.py
